--- a/css/faq.css
+++ b/css/faq.css
@@ -45,3 +45,17 @@
     font-size: 20px;
 
 }
+
+@media screen and (max-width: 768px){
+    .faq{
+        margin-left: 30px;
+        max-width: 80vw;
+    }
+
+    .title{
+        font-size: 2rem;
+        margin: 1rem auto;
+        padding: 0.5rem;
+    }
+
+}
