--- a/css/contato.css
+++ b/css/contato.css
@@ -21,3 +21,32 @@
 #contato-list-itens{
     padding: 50px;
 }
+
+@media screen and (max-width: 768px) {
+    .contato{
+        margin-left: 0px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #contato-maintittle{
+        font-size: 32px;
+        margin-bottom: 20px;
+    }
+
+    .contato-list{
+        display: flex;
+        flex-direction: column;
+        max-width: 700px;
+    }
+
+    #contato-list-itens{
+        padding: 20px;
+    }
+
+    #iframe{
+        width: 100%;
+        height: 300px;
+    }
+}
