--- a/css/menu.css
+++ b/css/menu.css
@@ -104,3 +104,23 @@
         transform: translateX(0);
     }
 }
+
+@media screen and (max-width: 768px) {
+    .menu{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .menu-list{
+        margin: 0;
+    }
+
+    .menu-links a{
+        padding: 10px;
+    }
+
+    #login{
+        margin-top: 10px;
+    }
+}
