--- a/css/contato.css
+++ b/css/contato.css
@@ -51,3 +51,34 @@
         height: 300px;
     }
 }
+
+@media screen and (max-width: 990px){
+    .contato{
+        margin-left: 0px;
+        margin-top: 12px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #contato-maintittle{
+        font-size: 32px;
+        margin-bottom: 20px;
+    }
+
+    .contato-list{
+        display: flex;
+        flex-direction: column;
+        max-width: 70%;
+    }
+
+    #contato-list-itens{
+        padding: 20px;
+        width: 500px;
+    }
+
+    #iframe{
+        width: 100%;
+        height: 300px;
+    }
+}
