--- a/css/faq.css
+++ b/css/faq.css
@@ -67,3 +67,24 @@
     }
 
 }
+
+@media screen and (max-width: 990px){
+    .faq{
+        margin-left: 30px;
+        max-width: 80vw;
+        align-items: center;
+    }
+
+    .title{
+        font-size: 2rem;
+        margin: 1rem auto;
+        padding: 0.5rem;
+        text-align: center;
+    }
+
+    .faq-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
