--- a/css/menu.css
+++ b/css/menu.css
@@ -124,3 +124,23 @@
         margin-top: 10px;
     }
 }
+
+@media screen and (max-width: 990px){
+    .menu{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .menu-list{
+        margin: 0;
+    }
+
+    .menu-links a{
+        padding: 10px;
+    }
+
+    #login{
+        margin-top: 10px;
+    }
+}
