--- a/css/home.css
+++ b/css/home.css
@@ -142,4 +142,9 @@
         margin: 1rem auto;
         padding: 0.5rem;
     }
+
+    .navbar-img{
+        height: 40vh;
+        width: 800px;
+    }
 }
